[Download Home] Fix for 0 seconds remaining

Download backend is not able to compute the time remaining when download
is started/paused/resumed. In those cases, currently it returns 0 which
causes confusion to the UI. This CL proposes to return -1 in those cases
and which can be easily distinguished from a valid 0 seconds remaining
message.

BUG=682865

Review-Url: https://codereview.chromium.org/2647343005
Cr-Commit-Position: refs/heads/master@{#446106}

Former-commit-id: 0a1f62791cf3be6eaca850d90518fe2436b5a94c